results/SVCOMP/4-shot/log-ExSymExe16-2024_03_18_18_31_09.txt
class Main {
    static int field;

    //@ ensures \result ==> field == 9 && z == field - 3;
    //@ ensures !\result ==> field != 9 || z != field - 3;
    public static boolean f() {
        int x = 3;
        Main inst = new Main();
        field = 9;
        return inst.test(x, field);
    }

    //@ requires z == field - 3;
    //@ ensures \result ==> (z == 0 ==> \not_specified) && (z != 0 ==> \not_specified);
    //@ ensures !\result ==> (z == 0 ==> \not_specified) && (z != 0 ==> \not_specified);
    public boolean test(int x, int z) {
        System.out.println("Testing ExSymExe16");
        int y = 3;
        x = z - y;
        if (z == 0) {
            System.out.println("branch FOO1");
            return false;
        } else System.out.println("branch FOO2");
        if (x == 0) System.out.println("branch BOO1");
        else
            System.out.println("branch BOO2");
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:14: error: This backslash token is unknown: \not_specified
    //@ ensures \result ==> (z == 0 ==> \not_specified) && (z != 0 ==> \not_specified);
                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:14: error: This backslash token is unknown: \not_specified
    //@ ensures \result ==> (z == 0 ==> \not_specified) && (z != 0 ==> \not_specified);
                                                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:15: error: This backslash token is unknown: \not_specified
    //@ ensures !\result ==> (z == 0 ==> \not_specified) && (z != 0 ==> \not_specified);
                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:15: error: This backslash token is unknown: \not_specified
    //@ ensures !\result ==> (z == 0 ==> \not_specified) && (z != 0 ==> \not_specified);
                                                                        ^
4 errors

